--- a/assets/shell/theme/abbott.css
+++ b/assets/shell/theme/abbott.css
@@ -54,7 +54,7 @@
   background: rgba(35, 28, 20, .1) /* bistre */;
   border: none;
 }
-.cm-s-abbott .CodeMirror-linenumber { color: #fbec5d /* lemon_meringue */; }
+.cm-s-abbott .CodeMirror-linenumber { color: #FF9933 /* brand saffron */; }
 
 .cm-s-abbott .CodeMirror-guttermarker { color: #f63f05 /* cinnabar */; }
 
@@ -104,17 +104,17 @@
 /* Roughly equivalent to Vim's Visual group. */
 .cm-s-abbott .CodeMirror-selected,
 .cm-s-abbott.CodeMirror-focused .CodeMirror-selected {
-  background: #273900 /* dark_olive */;
+  background: rgba(255, 77, 51,0.4) /* dark_olive */;
 }
 .cm-s-abbott .CodeMirror-line::selection,
 .cm-s-abbott .CodeMirror-line > span::selection,
 .cm-s-abbott .CodeMirror-line > span > span::selection {
-  background: #273900 /* dark_olive */;
+  background: rgba(255, 77, 51,0.5) /* dark_olive */;
 }
 .cm-s-abbott .CodeMirror-line::-moz-selection,
 .cm-s-abbott .CodeMirror-line > span::-moz-selection,
 .cm-s-abbott .CodeMirror-line > span > span::-moz-selection {
-  background: #273900 /* dark_olive */;
+  background: rgba(255, 77, 51,0.5) /* dark_olive */;
 }
 
 /* Roughly equivalent to Vim's SpecialKey group. */
@@ -164,7 +164,7 @@
 .cm-s-abbott span.cm-variable,
 .cm-s-abbott span.cm-variable-2,
 .cm-s-abbott span.cm-variable-3 {
-  color: #8ccdf0 /* periwinkle_blue */;
+  color: #D3D05B /* periwinkle_blue */;
 }
 
 /* Roughly equivalent to Vim's Function group. */
@@ -264,6 +264,7 @@
 
 /* Roughly equivalent to Vim's Folded group. */
 .cm-s-abbott .CodeMirror-foldmarker {
-  color: #f63f05 /* cinnabar */;
+  color: #fbb32f /* cinnabar */;
   text-shadow: none;
+  font-size: 16px;
 }
