--- a/_layouts/canvas.html
+++ b/_layouts/canvas.html
@@ -3,11 +3,12 @@
 
   {% include head.html %}
 <head>
-<script src="assets/shell/codemirror.js"></script>
-<link rel="stylesheet" href="assets/shell/codemirror.css">
-<link rel="stylesheet" href="assets/shell/theme/abbott.css">
-<script src="assets/shell/mode/apl/apl.js"></script>
-<script type="module" src="assets/js/turtle.js"></script>
+<script src="assets/js/turtling/shell/codemirror.js"></script>
+<link rel="stylesheet" href="assets/js/turtling/shell/codemirror.css">
+<link rel="stylesheet" href="assets/js/turtling/shell/theme/abbott.css">
+<script src="assets/js/turtling/shell/mode/apl/apl.js"></script>
+<script type="module" src="assets/js/turtling/shell.js"></script>
+<script type="text/javascript" src="/assets/js/service_worker.js"></script>
 </head>
   <body class="bg-black fixed w-full">
   {{ content }}
