--- a/_layouts/canvas.html
+++ b/_layouts/canvas.html
@@ -10,7 +10,7 @@
 <script type="module" src="assets/js/turtling/shell.js"></script>
 <script type="text/javascript" src="/assets/js/service_worker.js"></script>
 </head>
-  <body class="bg-black fixed w-full">
+  <body class="bg-black w-full">
   {{ content }}
   </body>
 </html>
