--- a/_includes/notes_graph.html
+++ b/_includes/notes_graph.html
@@ -38,8 +38,7 @@
     display: block;
   }
 </style>
-
-<div id="graph-wrapper">
+          <div class="bg-white p-6 rounded-lg shadow-xl border border-gray-200 shadow-orange-600/50 max-w-4xl max-h-max  mx-auto my-8 hover:shadow-xl transition-shadow duration-300"  id="graph-wrapper">
   <script>
     window.addEventListener("load", loadGraph);
 
@@ -308,4 +307,4 @@
       }
     }
   </script>
-</div>
+        </div>
