Update font to Lora

--- a/styles.scss
+++ b/styles.scss
@@ -8,7 +8,7 @@
 
 // Set the font-family globally
 body {
-  font-family: 'Noto Serif Grantha', serif;
+  font-family: 'Lora', serif;
 }
 html {
   scroll-behavior: smooth;
