--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="assets/css/paper.min.css"
     /> -->
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Grantha&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 
   <meta property="og:site_name" content="{{ site.title }}">
 
