--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -62,7 +62,7 @@
         }
 
         // Redirect immediately - no delays
-        window.location.replace("{{ page.redirect_link }}");
+        // window.location.replace("{{ page.redirect_link }}");
       })();
     </script>
   </head>
