paperland.sg domain shift

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -4,7 +4,7 @@
   <input id="name-input" type="text" name="name" placeholder="Alan Kay" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary" />
 
   <label for="email-input" class="font-medium text-gray-700">Email*</label>
-  <input id="email-input" type="email" name="email" placeholder="alan@paperland.in" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary" />
+  <input id="email-input" type="email" name="email" placeholder="alan@paperland.sg" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary" />
 
   <label for="message-input" class="font-medium text-gray-700">Message*</label>
   <textarea id="message-input" name="message" rows="4" placeholder="There are more contexts than the one that we're in — the one that we think is reality" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary"></textarea>
