--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,9 +27,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Paperland" />
   <link rel="manifest" href="/favicon/site.webmanifest" />
-
-  <script defer data-domain="paperland.in" src="https://odin.fly.dev/js/script.js"></script>
-
+  <script defer data-domain="paperland.sg" src="https://odin.paperland.sg/js/script.hash.outbound-links.pageview-props.tagged-events.js"></script>
 
 
   {% if page.excerpt %}
