redirect jobs done?

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -1,5 +1,5 @@
 <!-- https://india.fly.dev/proxy/apps/guru/work -->
-<form id="lettertopaperland" class="flex flex-col p-6 space-y-4 rounded-md shadow-lg bg-primary-light" accept-charset="UTF-8" action="https://india.fly.dev/proxy/apps/guru/work" method="POST">
+<form id="lettertopaperland" class="flex flex-col p-6 space-y-4 rounded-md shadow-lg bg-primary-light" accept-charset="UTF-8" action="https://book.paperland.sg/proxy/apps/guru/work" method="POST">
   <label for="name-input" class="font-medium text-gray-700">Name*</label>
   <input id="name-input" type="text" name="name" placeholder="Alan Kay" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary" />
 
