--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,8 +27,12 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Paperland" />
   <link rel="manifest" href="/favicon/site.webmanifest" />
-  <script defer data-domain="paperland.sg" src="https://odin.paperland.sg/js/script.hash.outbound-links.pageview-props.tagged-events.js"></script>
-
+  
+<script async src="https://odin.paperland.sg/js/pa-f2iVy3k9mCWkDhIyTDf7a.js"></script>
+<script>
+  window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+  plausible.init()
+</script>
 
   {% if page.excerpt %}
   <meta property="og:description" content="{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}"/>
