approach page skeleton

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -35,6 +35,7 @@
           </div>
           <div class="hidden sm:ml-6 sm:block">
             <div class="flex space-x-4">
+              <a href="/approach" class="px-3 py-2 text-sm font-medium rounded-md {% if page.nav_color == 'white' %}text-white{% else %}text-black{% endif %}">Our Approach</a>
               <a href="/#blog" class="px-3 py-2 text-sm font-medium rounded-md {% if page.nav_color == 'white' %}text-white{% else %}text-black{% endif %}">Blog</a>
               <a href="/#contact" class="px-3 py-2 text-sm font-medium rounded-md {% if page.nav_color == 'white' %}text-white{% else %}text-black{% endif %}">Contact Us</a>
             </div>
@@ -47,6 +48,7 @@
     <div class="w-1/2 rounded-md sm:hidden bg-primary-light" id="mobile-menu">
       <div class="px-2 pt-2 pb-3 space-y-1">
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+        <a href="/approach" class="block px-3 py-2 text-base font-medium rounded-md text-text-light hover:bg-gray-700 hover:text-white">Our Approach</a>
         <a href="/#blog" class="block px-3 py-2 text-base font-medium rounded-md text-text-light hover:bg-gray-700 hover:text-white">Blog</a>
         <a href="/#contact" class="block px-3 py-2 text-base font-medium rounded-md text-text-light hover:bg-gray-700 hover:text-white">Contact Us</a>
       </div>
