--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,7 @@
   <link rel="shortcut icon" href="/favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Paperland" />
+  <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="/favicon/site.webmanifest" />
   
 <script async src="https://odin.paperland.sg/js/pa-f2iVy3k9mCWkDhIyTDf7a.js"></script>
