update logo banner

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
           <!-- Logo -->
           <div class="flex items-center shrink-0">
             <a href="{{ site.baseurl }}/" class="flex items-center">
-              <img src="/assets/bannerpaperlang.svg" alt="PaperLand" class="h-10" />
+              <img src="/assets/bannerpaperlang.png" alt="PaperLand" class="h-10" />
             </a>
           </div>
         </div>
