--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,6 +12,7 @@
         <div class="flex-1 hidden sm:flex sm:justify-end">
           <div class="flex justify-end space-x-4">
             <a href="/approach" class="px-3 py-2 text-sm font-medium rounded-md {% if page.nav_color == 'white' %}text-white{% else %}text-black{% endif %}">Our Approach</a>
+            <a href="/mlp" class="px-3 py-2 text-sm font-medium rounded-md {% if page.nav_color == 'white' %}text-white{% else %}text-black{% endif %}">Math Leaders Program</a>
             <a href="/#blog" class="px-3 py-2 text-sm font-medium rounded-md {% if page.nav_color == 'white' %}text-white{% else %}text-black{% endif %}">Blog</a>
             <a href="/#contact" class="px-3 py-2 text-sm font-medium rounded-md {% if page.nav_color == 'white' %}text-white{% else %}text-black{% endif %}">Contact Us</a>
           </div>
@@ -59,6 +60,7 @@
         <!-- Menu items -->
         <div class="flex-1 px-4 pb-4 space-y-1 overflow-y-auto">
           <a href="/approach" class="block px-3 py-2 text-base font-medium rounded-md text-text-light hover:bg-gray-700 hover:text-white">Our Approach</a>
+          <a href="/mlp" class="block px-3 py-2 text-base font-medium rounded-md text-text-light hover:bg-gray-700 hover:text-white">Math Leaders Program</a>
           <a href="/#blog" class="block px-3 py-2 text-base font-medium rounded-md text-text-light hover:bg-gray-700 hover:text-white">Blog</a>
           <a href="/#contact" class="block px-3 py-2 text-base font-medium rounded-md text-text-light hover:bg-gray-700 hover:text-white">Contact Us</a>
         </div>
