--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -7,7 +7,7 @@
   <input id="email-input" type="email" name="email" placeholder="alan@paperland.sg" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary" />
 
   <label for="message-input" class="font-medium text-gray-700">Message*</label>
-  <textarea id="message-input" name="message" rows="4" placeholder="There are more contexts than the one that we're in — the one that we think is reality" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary"></textarea>
+  <textarea id="message-input" name="message" rows="4" placeholder="Tell us briefly about your students/context" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary"></textarea>
 
   <input type="hidden" name="return_url" value="{{ page.url | absolute_url }}" />
 
@@ -15,7 +15,7 @@
       <div class="h-captcha" data-sitekey="7688737e-8d00-4c1e-acdc-828ee1c02e08"></div>
   </div>
 
-  <button type="submit" class="px-4 py-2 text-white rounded-md bg-primary hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-primary">Submit</button>
+  <button type="submit" class="px-4 py-2 text-white rounded-md bg-primary hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-primary">Book a call</button>
 </form>
 
 <div class="fixed z-50 hidden bottom-4 right-4" id="toast-good">
