add contact us as backup

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -1,5 +1,5 @@
 <!-- https://india.fly.dev/proxy/apps/guru/work -->
-<form id="lettertopaperland" class="flex flex-col p-6 space-y-4 rounded-md shadow-lg bg-primary-light" accept-charset="UTF-8" action="https://book.paperland.sg/proxy/apps/guru/work" method="POST">
+<form id="lettertopaperland" class="flex flex-col p-6 space-y-4 rounded-md shadow-md bg-primary-light" accept-charset="UTF-8" action="https://book.paperland.sg/proxy/apps/guru/work" method="POST">
   <label for="name-input" class="font-medium text-gray-700">Name*</label>
   <input id="name-input" type="text" name="name" placeholder="Alan Kay" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary" />
 
@@ -19,7 +19,7 @@
 </form>
 
 <div class="fixed z-50 hidden bottom-4 right-4" id="toast-good">
-  <div class="flex items-center p-4 text-green-700 bg-green-100 border border-green-400 rounded-md shadow-lg">
+  <div class="flex items-center p-4 text-green-700 bg-green-100 border border-green-400 rounded-md shadow-md">
       <i class="mr-2 fa fa-check-circle"></i>
       <span>Sent! To the desks <a class="text-blue-600 underline" href="/about"><b>@paperland</b></a></span>
       <button class="ml-auto text-gray-500 hover:text-gray-700 focus:outline-none" onclick="document.getElementById('toast-good').style.display = 'none';">X</button>
@@ -27,7 +27,7 @@
 </div>
 
 <div class="fixed z-50 hidden bottom-4 right-4" id="toast-bad">
-  <div class="flex items-center p-4 text-red-700 bg-red-100 border border-red-400 rounded-md shadow-lg">
+  <div class="flex items-center p-4 text-red-700 bg-red-100 border border-red-400 rounded-md shadow-md">
       <i class="mr-2 fa fa-check-circle"></i>
       <span>Check the I am human checkbox!</span>
       <button class="ml-auto text-gray-500 hover:text-gray-700 focus:outline-none" onclick="document.getElementById('toast-bad').style.display = 'none';">X</button>
