Componentise and Introduce YT gallery

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -7,7 +7,7 @@
   <input id="email-input" type="email" name="email" placeholder="alan@paperland.sg" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary" />
 
   <label for="message-input" class="font-medium text-gray-700">Message*</label>
-  <textarea id="message-input" name="message" rows="4" placeholder="Tell us briefly about your students/context" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary"></textarea>
+  <textarea id="message-input" name="message" rows="4" placeholder="Tell us briefly about your context or background" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary"></textarea>
 
   <input type="hidden" name="return_url" value="{{ page.url | absolute_url }}" />
 
