--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
- Written in <a class="internal-link" href="{{ site.baseurl }}/about">Paperland</a>
+ Written in <a class="internal-link font-paperlang" href="{{ site.baseurl }}/about">PaperLand</a>
